Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,11 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object."
+    "#Your code here; import sqlite, create a connection and then a cursor object.\n",
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('dogs.db')\n",
+    "c = connection.cursor()"
    ]
   },
   {
@@ -103,6 +106,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.execute(\"\"\"CREATE TABLE IF NOT EXISTS dogs (id INTEGER PRIMARY KEY,\n",
+    "                                   name TEXT, age INTEGER,\n",
+    "                                   gender CHAR(1),\n",
+    "                                   breed TEXT,\n",
+    "                                   temperament TEXT,\n",
+    "                                   hungry BOOLEAN);\"\"\")\n",
+    "\n",
+    "c.execute(\"\"\"INSERT INTO dogs (name, age, gender, breed, temperament, hungry) VALUES\n",
+    "                (\"Snoopy\", 3, \"M\", \"beagle\", \"friendly\", 1),\n",
+    "                (\"McGruff\", 10, \"M\", \"bloodhound\", \"aware\", 0),\n",
+    "                (\"Scooby\", 6, \"M\", \"great dane\", \"hungry\", 1),\n",
+    "                (\"Little Ann\", 5, \"F\", \"coonhound\", \"loyal\", 0),\n",
+    "                (\"Pickles\", 13, \"F\", \"black lab\", \"mischievous\", 1),\n",
+    "                (\"Clifford\", 4, \"M\", \"big red\", \"smiley\", 1),\n",
+    "                (\"Lassie\", 7, \"F\", \"collie\", \"loving\", 1),\n",
+    "                (\"Snowy\", 8, \"F\", \"fox terrier\", \"adventurous\", 0),\n",
+    "                (NULL, 4, \"M\", \"golden retriever\", \"playful\", 1);\"\"\")\n",
+    "\n",
+    "connection.commit() #Save our changes to the database"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,11 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "fetchall() takes no arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-492c3fd18419>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT name, breed FROM dogs;'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: fetchall() takes no arguments (1 given)"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute('''SELECT name, breed FROM dogs;''').fetchall()"
    ]
   },
   {
@@ -270,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
